LP-DEP.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-dep
  namespace: trythat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing-page
          image: 248189943460.dkr.ecr.us-east-1.amazonaws.com/landingpage:latest
          ports:
            - containerPort: 80
