landingpage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: landingpage-service
  namespace: trythat-app
spec:
  selector:
    app: landing-page
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
